# CRUD-Concurs

./: CMakeLists.txt  README.md  main.c
Controller/: Service.c  Service.h
Domeniu/: Participant.c  Participant.h
Prezentare/: Ui.c  Ui.h
Repository/: Repository.c  Repository.h  VectorDinamic.c  VectorDinamic.h  fisier.txt
Teste/: Teste.c  Teste.h  teste.txt
